syntax = "proto3";

package discoverynetwork;

service DiscoveryNetwork {
  // Discovery Calls
  rpc Join (JoinRequest) returns (JoinResponse) {}
  rpc Disconnect (DisconnectRequest) returns (EmptyMessage) {}
  rpc Renew (JoinRequest) returns (EmptyRequest) {}
}

message EmptyMessage {}
message DisconnectRequest {}

message JoinRequest {
  string pool = 1; // required
  Node node = 2; // required
}

message JoinResponse {
  int32 resetInterval = 1;
  repeated Node nodes = 2;
}

message Node {
  string ip = 1; // required
  string port = 2; // required
}
